--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://lukegronert.github.io/ShopApp",
+  "homepage": "https://lukegronert.github.io/ShopApp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
